--- a/templates/main.html
+++ b/templates/main.html
@@ -2,12 +2,14 @@
   <header class="page-header">
     <div class="container">
       <h1 class="project-name">PhotoStats</h1>
-      <h2 class="project-tagline">Stats for your Instagram photos.</h2>
+      <h2 class="project-tagline">Stats for Instagram.</h2>
       <!-- Log in button -->
-      <button type="button" class="btn btn-login" aria-label="Left Align">
-        <i class="fa fa-instagram"></i>
-        Log in
-      </button>
+      <a href="https://api.instagram.com/oauth/authorize/?client_id=ff5d060756334790a7fb6aca51f80e03&scope=public_content&redirect_uri=http://www.jianweichuah.com/photostats/%23/main&response_type=token">
+        <button type="button" class="btn btn-login" aria-label="Left Align">
+          <i class="fa fa-instagram"></i>
+          Log in
+        </button>
+      </a>
     </div>
   </header>
 </div>
