Added base href for Angular

--- a/templates/main.html
+++ b/templates/main.html
@@ -4,7 +4,7 @@
       <h1 class="project-name">PhotoStats</h1>
       <h2 class="project-tagline">Stats for Instagram.</h2>
       <!-- Log in button -->
-      <a href="https://api.instagram.com/oauth/authorize/?client_id=ff5d060756334790a7fb6aca51f80e03&scope=public_content&redirect_uri=http://www.jianweichuah.com/photostats/%23/main&response_type=token">
+      <a href="https://api.instagram.com/oauth/authorize/?client_id=ff5d060756334790a7fb6aca51f80e03&scope=public_content&redirect_uri=http://www.jianweichuah.com/photostats/%23/&response_type=token">
         <button type="button" class="btn btn-login" aria-label="Left Align">
           <i class="fa fa-instagram"></i>
           Log in
